--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
+    "socket.io-client": "^4.8.3",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
